--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ body {
   background-color: #f4f1ec;
 }
 
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 main {
   flex: 1 0 auto;
 }
@@ -17,7 +23,7 @@ main {
 /* Navbar styling */
 
 .navbar {
-  background-color: #4b1f2a; 
+  background-color: #4b1f2a;
 }
 
 .navbar-brand {
@@ -62,3 +68,23 @@ footer a, footer p {
 footer hr {
     border-top: 1px solid #d9b29c;
     }
+
+/* Hero image styling */
+
+.hero-image img {
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (min-width: 768px) {
+    .hero-image img {
+    margin-top: -60px;
+}
+}
+
+/* text */
+.attuned-text {
+    color: #2b2b2b;
+    font-family: "lato";
+}
+  
