--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ main {
 /* Footer styling */
 footer {
   width: 100%;
-    background-color: #4b1f2a;
+    background-color: #54463A;
 }
 footer a, footer p {
   text-decoration: none !important;
