--- a/style.css
+++ b/style.css
@@ -23,20 +23,20 @@ main {
 /* Navbar styling */
 
 .navbar {
-  background-color: #54463A;
+  background-color: #d2cdc3;
 }
 
 .navbar-brand {
     font-family: "Allura", cursive;
     font-size: 50px;
-    color: #d9b29c;
+    color: #3b1e20;
 }
 
 .navbar-brand:hover {
     color: #f4f1ec;
 }
 .navbar-nav .nav-link {
-    color: #d9b29c;
+    color: #3b1e20;
     font-family: "Lato", sans-serif;
     font-weight: 500;
     font-size: 18px;
