--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #f4f1ec;
+/*  background-color: #f4f1ec; */
+  background-color: #d2cdc3;
 }
 
 header {
@@ -26,47 +27,70 @@ main {
   background-color: #311611;
 }
 
+.navbar-expand-lg .navbar-collapse {
+    justify-content: flex-end;
+}   
+
 .navbar-brand {
-    font-family: "Allura", cursive;
+    font-family: "Playfair Display", serif;
     font-size: 50px;
-    color: #d9b29c;
+    color: #d2cdc3;
+    letter-spacing: -8px;
 }
 
-.navbar-brand:hover {
+.navbar-brand:hover, .navbar-nav .nav-link:hover {
     color: #f4f1ec;
 }
 .navbar-nav .nav-link {
-    color: #d9b29c;
-    font-family: "Lato", sans-serif;
+    color: #d2cdc3;
+    font-family: "Lato", serif;
     font-weight: 500;
     font-size: 18px;
 }
 
 .navbar-toggler {
-    border-color: #d9b29c;
-    color: #d9b29c;
+    border-color: #d2cdc3;
+    color: #d2cdc3;
 }
 
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23b07a5a' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23d2cdc3' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+@media screen and (max-width: 768px) {
+    .navbar-brand {
+    font-size: 40px;
+    letter-spacing: -6px;
+    }
 }
 
 /* Footer styling */
 footer {
   width: 100%;
-    background-color: #4b1f2a;
+ /*   background-color: #4b1f2a; */
+ background-color: #311611;
 }
 footer a, footer p {
   text-decoration: none !important;
-  color: #d9b29c;   
+/* color: #d9b29c;  */
+color: #d2cdc3;
+}
+
+footer a {
+      font-family: "Lato", serif;
+}
+
+footer p {
+      font-family: "Lato", sans-serif;
 }
 
 .copyright {
-    color: #d9b29c;
+    color: #d2cdc3;
+    font-family: "Lato", sans-serif;
 }
 
 footer hr {
-    border-top: 1px solid #d9b29c;
+    border-top: 1px solid #d2cdc3;
     }
 
 /* Hero image styling */
@@ -84,7 +108,19 @@ footer hr {
 
 /* text */
 .attuned-text {
-    color: #2b2b2b;
+    color: #311611;
     font-family: "lato";
 }
-  
+
+/* contact page styles */
+
+.submit-button {
+    background-color: #311611;
+    color: #d2cdc3;
+    font-family: "Lato", serif;
+}
+
+.form-label {
+    font-family: "Lato", serif;
+    color: #311611;
+}
